--- a/TSAR/Views/Projects/Create.cshtml
+++ b/TSAR/Views/Projects/Create.cshtml
@@ -1,4 +1,4 @@
-﻿+@model TSAR.Models.Projects
+﻿@model TSAR.Models.Projects
 
 @{
     ViewBag.Title = "Create";
@@ -23,10 +23,9 @@
                 @Html.ValidationMessageFor(model => model.ProjectName, "", new { @class = "text-danger" })
             </div>
         </div>
-
         <div class="form-group">
             <div align="Center">
-                @Html.LabelFor(model => model.Id, "Id", htmlAttributes: new { @class = "control-label" })</div>
+                @Html.LabelFor(model => model.Id, "Select Client", htmlAttributes: new { @class = "control-label" })</div>
                 <div class="col-md-4 col-md-offset-4">
                     @Html.DropDownList("Id", null, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Id, "", new { @class = "text-danger" })
