--- a/TSAR/Views/Leaves/Details.cshtml
+++ b/TSAR/Views/Leaves/Details.cshtml
@@ -10,74 +10,129 @@
 <div>
     <h4>Leave</h4>
     <hr />
-    <dl class="dl-horizontal">
-        @*<dt>
-            @Html.DisplayNameFor(model => model.LeaveType.LeaveTypeName)
-        </dt>
+    <div style="overflow-x: auto">
+        <table class="table bg-light-gray">
+            <dl class="dl-horizontal">
+                @*<dt>
+                        @Html.DisplayNameFor(model => model.LeaveType.LeaveTypeName)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LeaveType.LeaveTypeName)
-        </dd>*@
+                    <dd>
+                        @Html.DisplayFor(model => model.LeaveType.LeaveTypeName)
+                    </dd>*@
 
-        <dt>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.FirstName)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ApprovedBy)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.ApprovedBy)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ApprovedBy)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.ApprovedBy)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.IsConfirmed)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.IsConfirmed)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.IsConfirmed)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.IsConfirmed)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LeaveDecsription)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.LeaveDecsription)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LeaveDecsription)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.LeaveDecsription)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.AccumulatedLeave)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.AccumulatedLeave)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.AccumulatedLeave)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.AccumulatedLeave)
+                </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.LeaveDate)
-        </dt>
+                <dt>
+                    @Html.DisplayNameFor(model => model.AnnualBalance)
+                </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LeaveDate)
-        </dd>
+                <dd>
+                    @Html.DisplayFor(model => model.AnnualBalance)
+                </dd>
+                @if (ViewBag.Gender == "Female")
+                {
+                    <dt>
+                        @Html.DisplayNameFor(model => model.MaternityBalance)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ReturnDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.MaternityBalance)
+                    </dd>
+                }
+                @if (ViewBag.Gender == "Male")
+                {
+                    <dt>
+                        @Html.DisplayNameFor(model => model.PaternityBalance)
+                    </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReturnDate)
-        </dd>
+                    <dd>
+                        @Html.DisplayFor(model => model.PaternityBalance)
+                    </dd>
+                }
+                <dt>
+                    @Html.DisplayNameFor(model => model.SickBalance)
+                </dt>
 
-    </dl>
+                <dd>
+                    @Html.DisplayFor(model => model.SickBalance)
+                </dd>
+                <dt>
+                    @Html.DisplayNameFor(model => model.FamilyResponsibilityBalance)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.FamilyResponsibilityBalance)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.LeaveDate)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.LeaveDate)
+                </dd>
+
+                <dt>
+                    @Html.DisplayNameFor(model => model.ReturnDate)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.ReturnDate)
+                </dd>
+
+            </dl>
+    @*</div>*@
+    </table>
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.LeaveId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+    <td>
+        <input type="button" title="Edit" value="Edit" class="btn btn-primary" onclick="location.href='@Url.Action("Edit", "Leaves", new { id = Model.LeaveId })'" />
+
+    </td>
+    <td>
+        <input type="button" title="Back To List" value="Index" class="btn btn-primary" onclick="location.href='@Url.Action("Index", "Leaves", new { id = Model.LeaveId })'" />
+
+    </td>
+@*<p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.LeaveId }) |
+            @Html.ActionLink("Back to List", "Index")
+        </p>*@
+    </div>
