--- a/TSAR/Views/Leaves/Edit.cshtml
+++ b/TSAR/Views/Leaves/Edit.cshtml
@@ -56,6 +56,49 @@
             @Html.TextBoxFor(model => model.AccumulatedLeave, htmlAttributes: new { @class = "form-control", @readonly = "readonly", @Value = ViewBag.AccumulatedLeaveString })
         </div>
     </div>
+    
+   
+    <div class="form-group">
+        @Html.LabelFor(model => model.AnnualBalance, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.AnnualBalance, htmlAttributes: new { @class = "form-control", @readonly = "readonly", @Value = ViewBag.AnnualLeaveBal })
+        </div>
+    </div>
+    
+    @if (ViewBag.Gender == "Female")
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.MaternityBalance, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.MaternityBalance, htmlAttributes: new {@class = "form-control", @readonly = "readonly", @Value = ViewBag.MaternityLeaveBal})
+            </div>
+        </div>
+    }
+    
+    @if (ViewBag.Gender == "Male")
+    {
+        <div class="form-group">
+            @Html.LabelFor(model => model.PaternityBalance, htmlAttributes: new {@class = "control-label col-md-2"})
+            <div class="col-md-10">
+                @Html.TextBoxFor(model => model.PaternityBalance, htmlAttributes: new {@class = "form-control", @readonly = "readonly", @Value = ViewBag.PaternityLeaveBal})
+            </div>
+        </div>
+    }
+    
+    <div class="form-group">
+        @Html.LabelFor(model => model.SickBalance, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.SickBalance, htmlAttributes: new { @class = "form-control", @readonly = "readonly", @Value = ViewBag.SickLeaveBal })
+        </div>
+    </div>
+    
+    <div class="form-group">
+        @Html.LabelFor(model => model.FamilyResponsibilityBalance, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(model => model.FamilyResponsibilityBalance, htmlAttributes: new { @class = "form-control", @readonly = "readonly", @Value = ViewBag.FamilyLeaveBal })
+        </div>
+    </div>
+
 
     <div class="form-group">
         @Html.LabelFor(model => model.LeaveDate, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -108,7 +151,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
+            <input type="submit" value="Save" class="btn btn-primary" />
         </div>
     </div>
 </div>
