--- a/MobileTsar/MobileTsar/Views/RegisterPage.xaml
+++ b/MobileTsar/MobileTsar/Views/RegisterPage.xaml
@@ -8,17 +8,20 @@
 <ContentPage.BindingContext>
   <viewModels:RegisterViewModel/>
 </ContentPage.BindingContext>
+<ScrollView>
+    <StackLayout Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center">
+        <Entry Text="{Binding Email}" Placeholder="Your Email" FontSize="30"></Entry>
+        <Entry Text="{Binding Password}" Placeholder="Your Password" IsPassword="True" FontSize="30"></Entry>
+        <Entry Text="{Binding ConfirmPassword}" Placeholder="Confirm your password" IsPassword="True" FontSize="30"></Entry>
 
-  <StackLayout Orientation="Vertical" Spacing="30" Padding="30" VerticalOptions="Center">
-    <Entry Text="{Binding Email}" Placeholder="Your Email" FontSize="30"></Entry>
-    <Entry Text="{Binding Password}" Placeholder="Your Password" IsPassword="True" FontSize="30"></Entry>
-    <Entry Text="{Binding ConfirmPassword}" Placeholder="Confirm your password" IsPassword="True" FontSize="30"></Entry>
-  
-  <Button Command="{Binding RegisterCommand}" Text="Register"></Button>
-  
-  <Label Text="{Binding Message}"></Label>
-  
-  <Button Text="Login Instead" Clicked="Button_OnClicked"></Button>
-  </StackLayout>
+        <Button Command="{Binding RegisterCommand}" Text="Register"></Button>
+
+        <Label Text="{Binding Message}"></Label>
+
+        <Button Text="Login Instead" Clicked="LoginButton_OnClicked"></Button>
+        <Button Text="Finger Print Login" Clicked="FingerButton_OnClicked"></Button>
+    </StackLayout>
+</ScrollView>
+
 
 </ContentPage>
